Did a major code cleanup for the sword kitty.

--- a/data/objects/enemies/milgramen/kitty_sword.cfg
+++ b/data/objects/enemies/milgramen/kitty_sword.cfg
@@ -14,46 +14,36 @@ editor_info: {
 },
 
 properties: {
-	attack_damage: "if(higher_difficulty,2,1)",
-	team: "'evil'",
-	taxonomy: "TaxonomyType :: enum neutral",
+	consecutive_knives_thrown: {type:"int", init:"0"},
+	
+
+
+#-------------------------- hittable metadata --------------------------#
+	title: "~Ralph~",
+	description: "~A soldier eager to surpass the call of duty through sheer force of aggression.~",
+	taste: "~A wool sweater with a thin coat of whey protein.~",
+
+#-------------------------- hittable overrides --------------------------#
 	facing_player: "if(level.player.x < x, facing < 0, facing > 0)",
 	damage_type:  "if( animation = 'lunge_attack', enum stab, enum slash)",
 	flinch_threshold: 40,
 	hurt_velocity_x: 0,
 	hurt_velocity_y: 0,
-	consecutive_knives_thrown: {type:"int", init:"0"},
-	
-	title: "~Ralph~",
-	description: "~A soldier eager to surpass the call of duty through sheer force of aggression.~",
-	taste: "~A wool sweater with a thin coat of whey protein.~",
+	team: "'evil'",
+	taxonomy: "TaxonomyType :: enum neutral",
 
-	play_object_specific_pain_vocalization: "def(DamageType damage_type, damage_amount) -> commands play_sound__falloff('cat-growl-ornery.wav')",
-
-
+	attack_damage: "if(higher_difficulty,2,1)",
 	posthit_invicibility_period: "100",
 	springiness: "200",
-	energize_duration: "if(higher_difficulty,20,80)",
 	spring_amount: "1400",
 	bounce_roundness: "200",
 	points_value: "500",
 	is_a_boss: { default:true },
-		
-	spin_attack_anims: "['enter_spin_attack', 'leave_spin_attack', 'spin_attack']",
-	lunge_attack_anims: "['lunge_attack', 'lunge_stuck', 'lunge_unstuck']",
-	//jump_attack_anims: ['enter_prepare_jump', 'prepare_jump']
-	
-	player_too_close: "(lib.math.length(me,level.player) < 120)",
-	begin_spin_attack: "[set(consecutive_knives_thrown,0), animation('enter_spin_attack')]",
 
 
-	knife_offset: "def(decimal angle_offset) -> {x: decimal, y: decimal} {x: mid_x + offset[0], y: mid_y + offset[1]} where offset = orbit(0, 0, self.rotate - 90 + angle_offset, mid_y-10-y)",
-	knife_speed: "700",
-	knife_vel: "def(decimal angle_offset) -> {x: decimal, y: decimal} {x: knife_speed * cos(angle_offset + self.rotate - 90), y: knife_speed * sin(angle_offset + self.rotate - 90)}",
-	spawn_individual_knife: "def(decimal angle_offset) -> commands spawn('${type}.throwing_knife', knife_offset(angle_offset).x, knife_offset(angle_offset).y, {rotate: angle_offset, velocity_x: knife_vel(angle_offset).x, velocity_y: knife_vel(angle_offset).y})",
+	play_object_specific_pain_vocalization: "def(DamageType damage_type, damage_amount) -> commands play_sound__falloff('cat-growl-ornery.wav')",
 
-	fire_knives: "[play_sound__falloff('weapon-swing-lightest'), spawn_individual_knife(-90 * facing), spawn_individual_knife(-70 * facing), spawn_individual_knife(-50 * facing), set(consecutive_knives_thrown,consecutive_knives_thrown+1)]",
-
+#-------------------------- combat decisions --------------------------#
 	is_player_at_a_good_knifethrow_position: "(
 		consecutive_knives_thrown < 3 and
 		(p_angle > 40) and
@@ -64,6 +54,59 @@ properties: {
 
 	is_past_player: "bool :: (sign(mid_x - level.player.mid_x) = me.facing)",
 	is_near_player: "bool :: abs(level.player.mid_x - mid_x) < 200",
+
+	energize_duration: "if(higher_difficulty,20,80)",
+		
+
+#-------------------------- attack logic --------------------------#
+	spin_attack_anims: "['enter_spin_attack', 'leave_spin_attack', 'spin_attack']",
+	lunge_attack_anims: "['lunge_attack', 'lunge_stuck', 'lunge_unstuck']",
+	//jump_attack_anims: ['enter_prepare_jump', 'prepare_jump']
+	
+
+
+	player_too_close: "(lib.math.length(me,level.player) < 120)",
+
+	begin_spin_attack: "[
+		set(consecutive_knives_thrown,0),
+		animation('enter_spin_attack')
+	]",
+
+
+	knife_offset: "def(decimal angle_offset) -> {x: decimal, y: decimal}
+		{
+			x: mid_x + offset[0],
+			y: mid_y + offset[1]
+		} where offset = orbit(0, 0, self.rotate - 90 + angle_offset, mid_y-10-y)",
+
+	knife_speed: "700",
+
+	knife_vel: "def(decimal angle_offset) -> {x: decimal, y: decimal}
+		{
+			x: knife_speed * cos(angle_offset + self.rotate - 90),
+			y: knife_speed * sin(angle_offset + self.rotate - 90)
+		}",
+
+	spawn_individual_knife: "def(decimal angle_offset) -> commands
+		spawn(
+			'${type}.throwing_knife',
+			knife_offset(angle_offset).x,
+			knife_offset(angle_offset).y,
+			{
+				rotate: angle_offset,
+				velocity_x: knife_vel(angle_offset).x,
+				velocity_y: knife_vel(angle_offset).y
+			}
+		)",
+
+	fire_knives: "[
+		play_sound__falloff('weapon-swing-lightest'),
+		spawn_individual_knife(-90 * facing),
+		spawn_individual_knife(-70 * facing),
+		spawn_individual_knife(-50 * facing),
+		set(consecutive_knives_thrown,consecutive_knives_thrown+1)
+	]",
+
 	
 #-------------------------- vars --------------------------#
 	_began_energizing: { type: "int", default: 0, persistent: false },
@@ -83,26 +126,66 @@ on_bounced_on: "if(animation in ['lunge_unstuck', 'lunge_stuck'],
 
 
 on_collide_side: "if(arg.collide_with = level.player,
-   #make it so if we collide with the player we immediately jump/attack.
-    this ensures the kitty can't simply get stuck between the player and a wall#
-   if(not animation in spin_attack_anims, [set(velocity_x, 0), begin_spin_attack]),
-  [
-  if(animation = 'lunge_attack' and (not arg.collide_with),
-		    [animation('lunge_stuck'), sound('sword-embed-in-wall.wav',0.6), add(x,-50*facing),set(velocity_x,0), set(_stuck_count, 0)]),
-  if(not (animation in spin_attack_anims + lunge_attack_anims), [set(facing, -facing), animation('turn'), set(velocity_x, 0)])
-		 ])",
+	/*
+		Make it so if we collide with the player we immediately jump/attack.
+		This ensures the kitty can't simply get stuck between the player and a wall
+	*/
+	if(not animation in spin_attack_anims,
+		[set(velocity_x, 0), begin_spin_attack]
+	),
+	[
+		if(animation = 'lunge_attack' and (not arg.collide_with),
+			[
+				animation('lunge_stuck'),
+				sound('sword-embed-in-wall.wav',0.6),
+				add(x,-50*facing),
+				set(velocity_x,0),
+				set(_stuck_count, 0)
+			]
+		),
+		if(not (animation in spin_attack_anims + lunge_attack_anims),
+			[
+				set(facing, -facing),
+				animation('turn'),
+				set(velocity_x, 0)
+			]
+		)
+	]
+)",
+
 on_end_hurt_anim: "animation('stand')",
 
 
 #-------------------------- spin attack handling --------------------------#
-on_end_spin_attack_anim: "if(_spin_counter > 0, [add(_spin_counter, -1),animation('spin_attack')],
-								if(lib.math.length(me,level.player) < 200, 
-									if(_spin_counter < -3,
-										[set(_spin_counter, 0), animation('spin_attack'), set(velocity_y, -2000)],	
-										[add(_spin_counter, -1), animation('spin_attack')]),
-									[animation('leave_spin_attack'), set(_spin_counter, 6), set(_can_attack_at, cycle+50)]))",
+on_end_spin_attack_anim: "if(_spin_counter > 0,
+	[
+		add(_spin_counter, -1),
+		animation('spin_attack')
+	],
+	if(lib.math.length(me,level.player) < 200, 
+		if(_spin_counter < -3,
+			[
+				set(_spin_counter, 0),
+				animation('spin_attack'),
+				set(velocity_y, -2000)
+			],	
+			[
+				add(_spin_counter, -1),
+				animation('spin_attack')
+			]
+		),
+		[
+			animation('leave_spin_attack'),
+			set(_spin_counter, 6),
+			set(_can_attack_at, cycle+50)
+		]
+	)
+)",
+
 on_end_enter_spin_attack_anim: "animation('spin_attack')",
+
 on_end_leave_spin_attack_anim: "animation('walk')",
+
 on_process_spin_attack: "if(is_standing, add(velocity_x, sin(cycle*5)*110))",
 
 
@@ -129,30 +212,61 @@ on_release_knives: "fire_knives",
 
 #-------------------------- jump attack handling --------------------------#
 on_end_enter_prepare_jump_anim: "animation('prepare_jump')",
-on_end_prepare_jump_anim: "if(cycle - _began_energizing > energize_duration,fire_event('initiate_jump'),animation('prepare_jump'))",
-on_initiate_jump: "[animation('jump'), if(level.player.x > mid_x,facing(1),facing(-1)),set(velocity_x, (level.player.mid_x - mid_x)*4), if(level.player.y > y2 and is_standing_on_platform, [set(fall_through_platforms, 20), set(velocity_y, 0)], if(mid_y - level.player.mid_y > 200, [set(velocity_y, -2400)]))]",
+
+on_end_prepare_jump_anim: "if(cycle - _began_energizing > energize_duration,
+	fire_event('initiate_jump'),
+	animation('prepare_jump')
+)",
+
+on_initiate_jump: "[
+	animation('jump'),
+	if(level.player.x > mid_x,
+		facing(1),
+		facing(-1)
+	),
+	set(velocity_x, (level.player.mid_x - mid_x)*4),
+	if(level.player.y > y2 and is_standing_on_platform,
+		[
+			set(fall_through_platforms, 20),
+			set(velocity_y, 0)
+		],
+		if(mid_y - level.player.mid_y > 200,
+			[set(velocity_y, -2400)]
+		)
+	)
+]",
+
 on_process_jump: "if(lib.math.length(me,level.player) < 90,
-                       begin_spin_attack,
-						if(is_standing, animation('stand')))",
+	begin_spin_attack,
+	if(is_standing, animation('stand'))
+)",
 
 
 #-------------------------- lunge attack handling --------------------------#
 on_end_lunge_anim: "animation('lunge_attack')",
 on_end_prepare_lunge_anim: "if(cycle - _began_energizing > energize_duration,
-								[
-									animation('lunge'),
-									play_sound__falloff('weapon-swing-medium'),
-									set(consecutive_knives_thrown,0),
-									set(_last_started_lunge_attack, level.cycle),
-								],
-								animation('prepare_lunge')
-							)",
-on_end_lunge_stuck_anim: "if(_stuck_count > 4, animation('lunge_unstuck'), [animation('lunge_stuck'), add(_stuck_count, 1)])",
+	[
+		animation('lunge'),
+		play_sound__falloff('weapon-swing-medium'),
+		set(consecutive_knives_thrown,0),
+		set(_last_started_lunge_attack, level.cycle),
+	],
+	animation('prepare_lunge')
+)",
+
+on_end_lunge_stuck_anim: "if(_stuck_count > 4,
+	animation('lunge_unstuck'),
+	[
+		animation('lunge_stuck'),
+		add(_stuck_count, 1)
+	]
+)",
 on_end_lunge_unstuck_anim: "animation('stand')",
-on_process_lunge_attack: "if( level.cycle > _last_started_lunge_attack + 200,  /*is_past_player and (not is_near_player),*/
-								animation('walk'),
-                     			animation('lunge_attack')
-                     		)",
+on_process_lunge_attack: "
+	if( level.cycle > _last_started_lunge_attack + 200,  /*is_past_player and (not is_near_player),*/
+		animation('walk'),
+		animation('lunge_attack')
+	)",
 
 
 #-------------------------- general handling --------------------------#
