Putative fix for the weird walking lock Ralph can get into which for no explicable reason seems to happen when he dies from fire damage.

--- a/data/level/Seaside/crevice-village-house-elder.cfg
+++ b/data/level/Seaside/crevice-village-house-elder.cfg
@@ -215,27 +215,35 @@
 					set(level.zoom, 1)
 				) ] where the_elder = (obj walking_npc <- get_object_or_die(level,'town_elder'))
 			",
-			"on_postdeath_dialogue_2": "[set(level.zoom, 3),
-			set(level.focus, [self]),
-			begin_skip_dialog_sequence(),
-			set(me.animation, 'extend_sword'),
-			schedule(100,
-			speech_dialog(
-				set(level.player.facing, -1),
-				self, if(not animation in ['swordBreak'],animation('swordBreak')), 
-					[~<em>ouch</em>~],
-					[~Okay, I've had enough!  I'm going home.~],
-					set(level.zoom, 1),
-					schedule(1,fire_event('postdeath_dialogue_3'))
-			)) ]",
+			"on_postdeath_dialogue_2": "[
+				set(level.zoom, 3),
+				set(level.focus, [self]),
+				begin_skip_dialog_sequence(),
+				set(me.animation, 'extend_sword'),
+				schedule(100,
+					speech_dialog(
+						set(level.player.facing, -1),
+						self, if(not animation in ['swordBreak'],animation('swordBreak')), 
+							[~<em>ouch</em>~],
+							[~Okay, I've had enough!  I'm going home.~],
+							set(level.zoom, 1),
+							schedule(1,fire_event('postdeath_dialogue_3'))
+					)
+				) 
+			]",
 			"on_postdeath_dialogue_3": "[
 				set(me.fall_through_platforms, 10000),
 				
-				walk_sadly_to(780, def() -> commands [schedule(20,
-						[fire_event(get_object_or_die(level,'lower_door'),'open'),
-						[fire_event(get_object_or_die(level,'elder_fight_storage'),'postdeath_dialogue_4'), remove_object(me)],
-						set(level.focus, [])  ])]
-				)		
+				walk_sadly_to(780, def() -> commands [
+					schedule(20, [
+						fire_event(get_object_or_die(level,'lower_door'),'open'),
+						[
+							fire_event(get_object_or_die(level,'elder_fight_storage'),'postdeath_dialogue_4'),
+							remove_object(me)
+						],
+						set(level.focus, [])  
+					])
+				])		
 			]",
 			"property_data": {
 				"max_x": 422,
