--- a/data/objects/props-interactive/npcs/kitty_sword_npc.cfg
+++ b/data/objects/props-interactive/npcs/kitty_sword_npc.cfg
@@ -20,7 +20,10 @@ properties: {
 				animation('stand')
 			),
 			if(animation in ['lowerBroken','lowerBrokenSniffle'],
-				animation('lowerBrokenSniffle')
+				if(_is_walking,
+					change_to_walk_anim,
+					animation('lowerBrokenSniffle')
+				)
 			),
 		]
 	)",
