Made Ralph completely immune to everything but impact damage, so the fight proceeds as intended and unintended side-consequences don't mess with it.

--- a/data/objects/enemies/milgramen/kitty_sword.cfg
+++ b/data/objects/enemies/milgramen/kitty_sword.cfg
@@ -41,6 +41,17 @@ properties: {
 	is_a_boss: { default:true },
 
 
+	custom_damage_table: "{
+		enum neutral: 1.0,
+		enum fire: 0.0,
+		enum energy: 0.0,
+		enum arcane: 0.0,
+		enum acid: 0.0,
+		enum impact: 1.0,
+		enum impale: 0.0,
+		enum lacerate: 0.0
+	}",
+
 	play_object_specific_pain_vocalization: "def(DamageType damage_type, damage_amount) -> commands play_sound__falloff('cat-growl-ornery.wav')",
 
 #-------------------------- combat decisions --------------------------#
