Some subtle changes to fix match-locks not persisting correctly in saves.

--- a/data/objects/props-interactive/locks/match_lock.cfg
+++ b/data/objects/props-interactive/locks/match_lock.cfg
@@ -49,13 +49,14 @@ properties: {
 
 on_start_level: "[add_object(_backing), set(alpha, 0)]",
 
-on_create: "if(event != '',
+on_load: "if(event != '',
 	[if(coordinator, [coordinator.add(me),set(_lock_coordinator, coordinator)], _lock_new_coordinator)
 		where coordinator = _lock_coordinator_existing,
 		
 	if(_event != default_event_state, do_aesthetic_activate)
 	])
 	",
+	
 
 on_collide_object_trigger: "if(_lock_coordinator != null and (not _lock_coordinator.is_lock_active(me)),
 								[	if(arg.collide_with is obj player_controlled, [_lock_coordinator.activate(me), do_aesthetic_activate]),
