--- a/data/objects/props-interactive/locks/match_lock_coordinator.cfg
+++ b/data/objects/props-interactive/locks/match_lock_coordinator.cfg
@@ -50,7 +50,7 @@ properties: {
 	prospective_lock: { type: "obj match_lock|null", default: null },  //when you unlock a pair, you start by activating one (which gets stored here), and then activating another.
 	activated: { type: "[obj match_lock]", default: [] },
 		
-	monitoring: { type: "[obj match_lock]", default: [] },
+	monitoring: { type: "[obj match_lock]", default: [], persistent: false },
 	
 	
 #-------------------------- pullable overrides --------------------------#
