I realized we're actually using the opposite of the intended easing function on our braziers.  Oops.

--- a/data/objects/props-interactive/misc/brazier_temporary_coordinator.cfg
+++ b/data/objects/props-interactive/misc/brazier_temporary_coordinator.cfg
@@ -14,7 +14,7 @@ properties: {
 #-------------------------- custom logic --------------------------#
 	calculate_shadow_brightness: "commands :: if(shadow_controller, set(shadow_controller.opacity_coefficient, desired_shadow_opacity))",
 
-	desired_shadow_opacity: "decimal :: lib.math.ease_out_sine( (1.0 - fraction) )
+	desired_shadow_opacity: "decimal :: lib.math.ease_in_sine( (1.0 - fraction) )
 		where fraction = decimal(size(activated))/decimal(size(monitoring)) * 0.70",
 	
 
